[tool.poetry]
name = "trabalho"
version = "0.1.0"
description = "code for treating chicago crime data and optmizing for cost and coverage"
authors = ["Felipe Whitaker <felipewhitaker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.4.2"
folium = "^0.12.1"
seaborn = "^0.11.2"
ipykernel = "^6.15.0"
plotly = "^5.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
